fix vehicle detail lightbox z-index levels

--- a/custom.css
+++ b/custom.css
@@ -701,6 +701,7 @@ input.go-button {width:23px;height:21px;background: url(/wp-content/uploads/GoBu
 /**********************************************/
 /* Lightbox
 /**********************************************/
+body #blinder {z-index:550!important;}
 #lightbox{background-color:#eee;padding:10px;border-bottom:2px solid #666;border-right:2px solid #666;border-radius:7px;-webkit-border-radius:7px;-moz-border-radius:7px;}
 #lightboxDetails,
 #lightboxDetails a{font-size:0.8em;padding-top:0.4em;color:black;}
